# scimark

./: .gitignore  README.md  pyproject.toml
src/scimark/: __init__.py  __main__.py  cli.py  converter.py  document.py  fallbacks.py  layout.py  markdown_blocks.py  math_spans.py  paths.py  pipeline.py  report.py  structure.py
src/scimark/passes/: __init__.py  algorithms.py  confidence.py  figures.py  fix_paths.py  math_cleanup.py  page_noise.py  picture_text.py  tables.py
tests/: test_algorithms.py  test_cli.py  test_fallbacks.py  test_figures.py  test_fix_paths.py  test_layout.py  test_markdown_blocks.py  test_math_cleanup.py  test_math_spans.py  test_page_noise.py  test_picture_text.py  test_pipeline.py  test_structure.py  test_tables.py
