[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scimark"
version = "0.1.0"
description = "Lightweight scientific PDF to Markdown parser."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Tiaan" }
]
dependencies = [
  "pymupdf4llm",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
scimark = "scimark.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
